--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.aboutme-link, .contact-link {
+.aboutme-link, .contact-link, .index-link {
     font-size: 30px;
     padding: 15px;
     display: inline-block;
