--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     font-size: 30px;
     padding: 15px;
     display: inline-block;
-    letter-spacing: 2px
+    letter-spacing: 2px;
 }
 h1 {
     font-size: 60px;
@@ -10,29 +10,43 @@ h1 {
 .MathTutoring {
     text-align: center;
     text-decoration: underline;
+    font-family: arial;
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(255, 0, 64), 0 0 5px rgb(230, 0, 0);
+    font-size: 70px;
+    margin-bottom: -100px;
+    
 }
-.bodyhome {
+body {
     margin: auto;
     max-width: 900px;
     padding: 10px;
-}
-body {
     background-image: linear-gradient(rgb(253, 253, 253),rgb(245, 126, 126),rgb(192, 7, 7)); 
     height: 100%;
     width: 100%;
+    margin-top: -20px;
 }
 p.border {
-    border-style: double;
+    text-shadow: 2px 2px 5px red;
+    border-style: solid rgb(0, 0, 0);
+    box-shadow: 5px 5px 9px rgb(231, 34, 34);
+    color: black;
 }
 #introduction {
     font-size: 40px;
 }
 .borderli1, .borderli2, .borderli3 {
-    border-style: dotted;
+    margin-top: -30px;
+    border-style: solid rgb(0, 0, 0);
+    box-shadow: 5px 5px 9px rgb(192, 19, 19);
+    
+  
+  
 }
 .scheduleandpayment {
     font-size: 30px;
     text-decoration: underline;
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(255, 0, 55), 0 0 5px rgb(255, 0, 34);
 }
 .moreinfo {
     color: rgb(255, 255, 255);
@@ -44,7 +58,16 @@ p.border {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: red;
+    background-color: rgb(192, 14, 14);
     color: white;
     text-align: center;
   }
+  #descriptionofmyself {
+    border-style: solid rgb(0, 0, 0);
+    box-shadow: 5px 5px 9px rgb(231, 34, 34);
+  }
+  h1.myself, h1.contact, h1.schedule {
+    text-shadow: 0 0 3px #FF0000, 0 0 5px rgb(255, 0, 43);
+  }
+  
+  
